--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ owo-colors = "4.2.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.15", features = ["brotli", "json", "zstd"] }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
 tar = "0.4.44"
 tempfile = "3.19.1"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
+toml = "0.8.22"
 xdg = "3.0.0"
 xz2 = "0.1.7"
 zip = "3.0.0"
