--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap_complete = "4.5.47"
 flate2 = "1.1.1"
 futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
 futures-lite = "2.6.0"
+liblzma = { version = "0.4.1", features = ["static"] }
 owo-colors = "4.2.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.19", default-features = false, features = ["brotli", "http2", "json", "rustls-tls-native-roots", "zstd"] }
@@ -19,8 +20,7 @@ tempfile = "3.19.1"
 tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
 toml = "0.8.22"
 xdg = "3.0.0"
-xz2 = "0.1.7"
-zip = "3.0.0"
+zip = "4.0.0"
 zstd = "0.13.3"
 
 [lints.rust]
